--- a/APP/static/css/seeker_index.css
+++ b/APP/static/css/seeker_index.css
@@ -123,7 +123,7 @@
 /*--------------------------------------------------------------
 # seeker-footer
 --------------------------------------------------------------*/
-#job-footer .container{
-    height: 100px;
-    background-color: #FFF;
-}
+/*#job-footer .container{*/
+/*    height: 100px;*/
+/*    background-color: #FFF;*/
+/*}*/
