--- a/APP/templates/auth/login.html
+++ b/APP/templates/auth/login.html
@@ -30,8 +30,7 @@
                 <div class="col-12">
                     <form action="{{ url_for('auth.login') }}" method="post">
                         <div class="flex justify-content-center align-items-center">
-                            <img class="mb-4" src="{{ url_for('static',filename='icons/bootstrap.svg') }}" alt=""
-                                 width="72" height="72">
+                            <img class="auth-logo mb-4" src="{{ url_for('static',filename='icons/bootstrap.svg') }}">
                         </div>
                         <div class="form-group">
                             <label for="username" class="sr-only">用户名</label>
