--- a/APP/templates/auth/register.html
+++ b/APP/templates/auth/register.html
@@ -1,14 +1,29 @@
 {% extends 'auth/base_auth.html' %}
 {% block title %}注册{% endblock %}
-{% block header %}
+{% block head_exts %}
+    <script>
+        $(function () {
+            $(".login").removeClass("active");
+            $(".register").addClass("active");
+            $(".auth a").on("click", function () {
+                $(this).parent().siblings().removeClass("active");
+                $(this).parent().addClass("active");
+            })
+        });
+    </script>
+    <style>
+        img {
+            width: 72px;
+            height: 72px;
+        }
+    </style>
 {% endblock %}
 
 {% block content %}
     <div class="auth-container">
         <div class="container">
             <div class="flex justify-content-center align-items-center">
-                <img class="mb-4" src="{{ url_for('static',filename='icons/bootstrap.svg') }}" alt=""
-                     width="72" height="72">
+                <img class="auth-logo mb-4" src="{{ url_for('static',filename='icons/bootstrap.svg') }}" alt="brand">
             </div>
             <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                 <li class="nav-item">
@@ -24,7 +39,7 @@
                 <div class="tab-pane fade show active" id="job_seeker" role="tabpanel"
                      aria-labelledby="pills-home-tab">
                     <form action="{{ url_for('auth.register') }}" method="post">
-                        <input type="text" name = "usertype" value="0" hidden>
+                        <input type="text" name="usertype" value="0" hidden>
                         <div class="form-group">
                             <label for="username" class="sr-only">用户名</label>
                             <input type="text" class="form-control" id="username" name="username" placeholder="用户名"
@@ -53,16 +68,18 @@
                     </form>
                 </div>
                 <div class="tab-pane fade" id="job_enterprise" role="tabpanel" aria-labelledby="pills-profile-tab">
-                     <form action="{{ url_for('auth.register') }}" method="post">
-                         <input type="text" name = "usertype" value="1" hidden>
+                    <form action="{{ url_for('auth.register') }}" method="post">
+                        <input type="text" name="usertype" value="1" hidden>
                         <div class="form-group">
                             <label for="username" class="sr-only">用户名</label>
-                            <input type="text" class="form-control" id="username" name="username" placeholder="用户名" aria-describedby="usernameHelp" autofocus required>
+                            <input type="text" class="form-control" id="username" name="username" placeholder="用户名"
+                                   aria-describedby="usernameHelp" autofocus required>
                             <small id="usernameHelp" class="form-text text-muted">请勿使用非法字符</small>
                         </div>
-                         <div class="form-group">
+                        <div class="form-group">
                             <label for="username" class="sr-only">企业名</label>
-                            <input type="text" class="form-control" id="enterprise_name" name="enterprise_name" placeholder="企业名" aria-describedby="usernameHelp" autofocus required>
+                            <input type="text" class="form-control" id="enterprise_name" name="enterprise_name"
+                                   placeholder="企业名" aria-describedby="usernameHelp" autofocus required>
                             <small id="usernameHelp" class="form-text text-muted">请勿使用非法字符</small>
                         </div>
                         <div class="form-group">
@@ -73,7 +90,8 @@
                         </div>
                         <div class="form-group">
                             <label for="password2" class="sr-only">验证密码</label>
-                            <input type="password" class="form-control" id="password2" name="password2" placeholder="验证密码" required>
+                            <input type="password" class="form-control" id="password2" name="password2"
+                                   placeholder="验证密码" required>
                         </div>
                         <div class="form-group flex justify-content-center">
                             <div class="flex align-items-baseline">
@@ -82,7 +100,7 @@
                             </div>
                         </div>
 
-                            <button type="submit" class="btn btn-primary btn-block">注册</button>
+                        <button type="submit" class="btn btn-primary btn-block">注册</button>
                     </form>
                 </div>
             </div>
