--- a/APP/templates/seeker/job_detail.html
+++ b/APP/templates/seeker/job_detail.html
@@ -2,6 +2,14 @@
 {% block head_exts %}
     <link rel="stylesheet" href="{{ url_for('static',filename='css/seeker_job_detail.css') }}">
     <script src="{{ url_for('static',filename='js/seeker_index.js') }}"></script>
+    <script>
+        // 借助外部按钮触发form提交
+        $(function () {
+            $("#login-btn").on("click", function () {
+                $("#submit").trigger("click");
+            })
+        })
+    </script>
 {% endblock %}
 
 {% block content %}
@@ -31,32 +39,70 @@
                     <div class="job-content">
                         <div class="content-item">
                             <h4>岗位描述：</h4>
-                            <ul>
-                                <li>成为一位优秀的游戏体验设计师，为玩家保证游戏的可用性和易用性，给他们带来畅快舒适的游戏体验；</li>
-                                <li>施展你的创意，爆发你的灵感，通过你的想象力，让玩家体会到你为他们准备的种种惊喜；</li>
-                                <li>运用你严谨的逻辑，参与游戏的用户分析、策划沟通，为玩家量身定制设计方案；</li>
-                                <li>与一流团队一起创作，让全球亿级用户体验你的游戏作品，你就是爆款的创造者。</li>
-                            </ul>
+                            <pre>
+                                {{ job.job_desc }}
+                            </pre>
                         </div>
                         <div class="content-item">
                             <h4>岗位要求:</h4>
-                            <ul>
-                                <li>与一流团队一起创作，让全球亿级用户体验你的游戏作品，你就是爆款的创造者。</li>
-                                <li>对交互设计理论有一定的理解，掌握交互设计相关专业知识和技巧；</li>
-                                <li>以用户为中心，从用户角度出发进行分析和设计；</li>
-                                <li>良好的逻辑分析能力，优秀的沟通及表达能力 ；</li>
-                                <li>热爱游戏，对游戏有自己的思考并愿意投身其中者优先。</li>
-                            </ul>
+                            <pre>
+                                {{ job.job_requirement }}
+                            </pre>
+                        </div>
+                        <div class="content-item">
+                            <div class="flex justify-content-start align-items-center">
+                                <h4>公司介绍: </h4>
+                                <span class="badge badge-info">{{ enterprise_name }}</span>
+                            </div>
+                            <div class="company-introduction">
+                                <pre>
+                                    {{ enterprise_desc }}
+                                </pre>
+                            </div>
                         </div>
                     </div>
 
                     <div class="contact">
                         <h4>申请职位</h4>
                         {% if g.user %}
-                            <a class="btn btn-primary" href="">投递简历</a>
+                            <a class="btn btn-primary" href="{{ url_for('seeker.job_edit',ind=job.id) }}">投递简历</a>
                         {% else %}
-                            <a  class="btn btn-primary" href="{{ url_for('auth.login') }}">登录投递简历</a>
+                            <a class="btn btn-primary" data-toggle="modal" data-target="#login-modal">登录投递简历</a>
                         {% endif %}
+                        <!-- Modal -->
+                        <div class="modal fade" id="login-modal" tabindex="-1" role="dialog"
+                             aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalCenterTitle" style="text-align: center">
+                                            登录</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form action="{{ url_for('auth.current_page_login') }}" method="post">
+                                            <input type="text" class="d-none" name="job_id" value="{{ job.id }}">
+                                            <div class="form-group">
+                                                <label for="username" class="col-form-label">用户名</label>
+                                                <input type="text" class="form-control" id="username" name="username"
+                                                       placeholder="请输入用户名">
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="password" class="col-form-label">密码</label>
+                                                <input type="password" class="form-control" id="password" name="password"
+                                                       placeholder="请输入密码">
+                                            </div>
+                                            <input type="submit" id="submit" class="d-none">
+                                        </form>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" id="login-btn" class="btn btn-primary">登录</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <hr class="devider">
                     <div class="share">
@@ -65,7 +111,7 @@
                     </div>
                 </div>
             </div>
-            <div class="placeholder"></div>
         </div>
+    <div class="placeholder"></div>
     </section>
 {% endblock %}
